cmake_minimum_required(VERSION 4.2)
project(point_to_line_distance LANGUAGES CXX)

# ศซ๏ฟฝ๏ฟฝC++๏ฟฝ๏ฟฝืผ
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# ๏ฟฝ๏ฟฝืฐวฐืบ
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR} CACHE PATH "๏ฟฝ๏ฟฝืฐวฐืบ" FORCE)

# ศซ๏ฟฝึฑ๏ฟฝ๏ฟฝ๏ฟฝัก๏ฟฝ๎ฃจMinGW/GCC๏ฟฝ๏ฟฝ
if(NOT MSVC)
    add_compile_options(-Wall -Wextra -O2)
endif()

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝฤผ๏ฟฝฤฟยผ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝิด๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝาต๏ฟฝinclude๏ฟฝยบ๏ฟฝsrc๏ฟฝยต๏ฟฝ๏ฟฝฤผ๏ฟฝ๏ฟฝ๏ฟฝ
include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝิด๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝฤฟยผ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝึด๏ฟฝ๏ฟฝsrc/CMakeLists.txt๏ฟฝ๏ฟฝ
add_subdirectory(src)

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝัก๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝำฒ๏ฟฝ๏ฟฝ๏ฟฝฤฟยผ
add_subdirectory(test)